# origin-cam

./: .gitignore  CMakeLists.txt
.github/workflows/: build-windows.yml
include/: bridge_service.h  constants.h  internal_bridge.h  main_frame.h  output_processor.h  ui_login.h  video_provider.h
resources/bridge/: bridge.js  package-lock.json  package.json
src/: app_core.cpp  bridge_service.cpp  internal_bridge.cpp  main_frame.cpp  output_processor.cpp  ui_login.cpp  video_provider.cpp
